changed display width

--- a/public/public-data/index.html
+++ b/public/public-data/index.html
@@ -15,8 +15,8 @@
 <link rel="stylesheet" href="/main.c6a827833aa7173cc96640f87a04935153b6814d28263c7d3a4a384f46ac7be36bf6dc9d61bd42699fa0855dfaa07cfd35b004f8389d29a508a2822388e0eee6.css" integrity="sha512-xqgngzqnFzzJZkD4egSTUVO2gU0oJjx9Oko4T0ase&#43;Nr9tydYb1CaZ&#43;ghV36oHz9NbAE&#43;DidKaUIooIjiODu5g==" crossorigin="anonymous">
 
 <noscript><style>img.lazyload { display: none; }</style></noscript><base href="http://localhost:1313/public-data/">
-  <link rel="canonical" href="http://localhost:1313/public-data/"><link rel="alternate" type="application/rss+xml" href="http://localhost:1313/public-data/index.xml" title="Data Source | Home"><link rel="sitemap" type="application/xml" href="http://localhost:1313/public-data/sitemap.xml" title="Data Source | Home">
-<title>Data Source  |  Home</title>
+  <link rel="canonical" href="http://localhost:1313/public-data/"><link rel="alternate" type="application/rss+xml" href="http://localhost:1313/public-data/index.xml" title="Public Data | Home"><link rel="sitemap" type="application/xml" href="http://localhost:1313/public-data/sitemap.xml" title="Public Data | Home">
+<title>Public Data  |  Home</title>
 <meta name="description" content="Congrats on setting up a new Doks project!">
 
     
@@ -43,13 +43,13 @@
         type="image/png"
       >
 <link rel="manifest" href="/manifest.webmanifest">
-<meta property="og:title" content="Data Source">
+<meta property="og:title" content="Public Data">
 <meta property="og:description" content="Congrats on setting up a new Doks project!">
 <meta property="og:type" content="website">
 <meta property="og:url" content="http://localhost:1313/public-data/"><meta property="og:image" content="http://localhost:1313/cover.png"><meta property="og:site_name" content="My Docs">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="http://localhost:1313/cover.png"><meta name="twitter:title" content="Data Source">
+<meta name="twitter:image" content="http://localhost:1313/cover.png"><meta name="twitter:title" content="Public Data">
 <meta name="twitter:description" content="Congrats on setting up a new Doks project!">
 <meta name="twitter:site" content="@getdoks">
 
@@ -66,7 +66,7 @@
      },
      {
        "@type": "ListItem",
-       "name": "Data Source",
+       "name": "Public Data",
        "position": 2
      }
    ]
@@ -121,10 +121,13 @@
       
       <div class="offcanvas-body d-flex flex-column flex-lg-row justify-content-between">
         <ul class="navbar-nav flex-grow-1"><li class="nav-item">
-                <a class="nav-link" href="http://localhost:1313/public-data/">Public Data</a>
+                <a class="nav-link" href="http://localhost:1313/ai_ml/">AI/ML</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://localhost:1313/blog/">Blog</a>
+                <a class="nav-link" href="http://localhost:1313/news/">News</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="http://localhost:1313/public-data/" aria-current="true">Public Data</a>
               </li>
             </ul>
 
@@ -247,7 +250,7 @@
     <div class="row">
       <div class="col-lg-8 text-center text-lg-start">
         <ul class="list-inline">
-          <li class="list-inline-item"><a class="text-muted" href="/privacy/">Privacy Policy</a></li>
+          <li class="list-inline-item"><a class="text-muted" href="/privacy/">Privacy Policy</a></li><li class="list-inline-item"><a class="text-muted" href="/terms/">Terms of Service</a></li>
         </ul>
       </div>
       <div class="col-lg-8 text-center text-lg-end">
